# bevy_entity_system

./: .gitignore  Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: data_match.rs  entity_system_function.rs  filter.rs  implementors.rs  into_entity_system.rs  into_system.rs  lib.rs  marked_entity_system.rs  pipe.rs  shrink_fetch.rs
