[package]
name = "bevy_entity_system"
version = "0.14.1"
edition = "2021"
description = "Adds systems that only operate on single entity"
repository = "https://github.com/vil-mo/bevy_entity_system"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "bevy"]
categories = ["abstactions"]

[dependencies]
bevy_utils = { version = "0.14" }
bevy_ecs = { version = "0.14" }
bevy_entity_system_macros = { path = "macros" }
