[package]
name = "bevy_entity_system_macros"
version = "0.14.1"
description = "Bevy EntitySystem Macros"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
bevy_macro_utils = "0.14"

syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
